#2044: Pique: Fix button block width on mobile

--- a/pique/assets/css/blocks.css
+++ b/pique/assets/css/blocks.css
@@ -440,12 +440,6 @@ body.home .wp-block-table.alignwide .wp-block-table.alignfull {
 	color: #83b6cc;
 }
 
-@media (max-width: 767px) {
-	.wp-block-button .wp-block-button__link {
-		width: 75%;
-	}
-}
-
 /* Separator */
 
 .wp-block-separator {
